fix: flex-basis on firefox

--- a/src/public/templates/menu/menu.styles.scss
+++ b/src/public/templates/menu/menu.styles.scss
@@ -45,7 +45,7 @@
 
   &__tab-panel {
     width: calc(100% - 100px);
-    flex-basis: calc(100% - 100px);
+    // flex-basis: calc(100% - 100px);
     flex-shrink: 0;
     flex-grow: 0;
   }
